--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,8 @@
 auxiliary.org-netbeans-modules-php-nette-tester.binary_2e_enabled=false
+auxiliary.org-netbeans-modules-php-nette-tester.coverage_2e_source_2e_path=
+auxiliary.org-netbeans-modules-php-nette-tester.coverage_2e_source_2e_path_2e_enabled=false
 auxiliary.org-netbeans-modules-php-nette-tester.php_2e_ini_2e_enabled=true
-auxiliary.org-netbeans-modules-php-nette-tester.php_2e_ini_2e_path=../../bin/php/php5.5.12/php.ini
+auxiliary.org-netbeans-modules-php-nette-tester.php_2e_ini_2e_path=../../../../xampp/php/php.ini
 auxiliary.org-netbeans-modules-php-nette-tester.tester_2e_enabled=true
 auxiliary.org-netbeans-modules-php-nette-tester.tester_2e_path=vendor/bin/tester.bat -p php
 file.reference.nlp-elements-tests=tests
