+ input / output, IPv4, IPv6...

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "cothema/nlp-elements",
-    "description": "Natural Language Processing Elements",
+    "description": "Natural Language Processing - Elements",
     "type": "project",
     "authors": [
         {
